fix: root colors for dark mode

--- a/src/main.scss
+++ b/src/main.scss
@@ -191,9 +191,9 @@ body {
   font-weight: 900;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --color-primary-800: "";
-    --color-primary-100: "";
-  }
-}
+// @media (prefers-color-scheme: dark) {
+//   :root {
+//     --color-primary-800: "";
+//     --color-primary-100: "";
+//   }
+// }
